--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index",
     "dev": "nodemon --exec 'heroku local' --signal SIGTERM",
-    "test": "env-cmd .env mocha -u tdd ./tests --timeout 4000"
+    "test": "heroku local:run mocha -u tdd ./tests --timeout 4000"
   },
   "engines": {
     "node": "v11.11.0"
@@ -22,7 +22,6 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "chai-http": "^4.2.1",
-    "env-cmd": "^8.0.2",
     "mocha": "^6.0.2",
     "nodemon": "^1.18.10"
   },
